@@ -135,7 +135,7 @@ observer3d <- function(x, y=NULL, z=NULL, auto=FALSE) {
   }    
   prev <- .C(rgl_getObserver, success=integer(1), ddata=numeric(3), NAOK = TRUE)$ddata
   .C(rgl_setObserver, success=as.integer(auto), ddata=as.numeric(location), NAOK = TRUE)
-  invisible(prev)
+  lowlevel(prev)
 }
 
 # Shapes
