@@ -56,7 +56,7 @@ Duncan Murdoch
 
   theta <- seq(0, 4*pi, len=100)
   xyz <- cbind(sin(theta), cos(theta), sin(theta/2))
-  lineid <- rgl::plot3d(xyz, type="l", alpha = 1:0, lwd = 5, col = "blue")["data"]
+  lineid <- plot3d(xyz, type="l", alpha = 1:0, lwd = 5, col = "blue")["data"]
 
   rglwidget(width=500, height=300) \%>\%
   playwidget(ageControl(births = theta,
